# zomato-restaurant-rating-prediction

./: .gitattributes  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  README_original.md  TEMPLATE_README.md  deploy.sh  docker-compose.yml  environment.yml  nginx.conf  pyproject.toml  requirements-production.txt  requirements.txt  requirements_conda.txt  setup.sh
data/processed/: zomato_eda_tabular.parquet  zomato_geo.parquet  zomato_geo_features_final.parquet  zomato_geo_with_coords.parquet  zomato_geo_with_coords_packed.parquet
docs/: mkdocs.yml
docs/docs/: index.md
frontend/: index.html
notebooks/: 01-pkm-initial-data-exploration.ipynb  02-pkm-data-cleaning-and-preparation.ipynb  04-pkm-Geolocation-Analysis.ipynb  05-NLP-Feature-Engineering.ipynb  06_Modeling_and_Evaluation.ipynb  Untitled.ipynb  ruff-copy.ipynb
reports/: Zomato Data Cleaning Guide.html
zomato_prediction/: __init__.py  api.py  config.py  data_processing.py  dataset.py  features.py  geo_features.py  modeling.py  nlp_features.py  plots.py  prediction_service.py
zomato_prediction/modeling/: predict.py  train.py
