[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zomato_prediction"
version = "0.0.1"
description = "This model is made to predict the ratings and sentiment of the customers, on per resturant basis."
authors = [
  { name = "Puneet Kumar Mishra" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["zomato_prediction"]
include = ["pyproject.toml", "zomato_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["zomato_prediction"]
force-sort-within-sections = true

[tool.pylsp.plugins]
ruff.enabled = true
black.enabled = true
isort.enabled = true
pycodestyle.enabled = false
flake8.enabled = false
pydocstyle.enabled = false
pyflakes.enabled = false
